mengedit index dan style

--- a/resources/views/layout/sidebar/index.html
+++ b/resources/views/layout/sidebar/index.html
@@ -126,6 +126,18 @@
             <li><a href="#">Tambah Akun</a></li>
           </ul>
         </li>
+        <li>
+          <div class="profile-details">
+            <div class="profile-content">
+              <img src="assets/profile.webp" alt="profileImg" />
+            </div>
+            <div class="name-job">
+              <div class="profile_name">Baizhu</div>
+              <div class="job">Apoteker</div>
+            </div>
+            <i class="bx bx-log-out"></i>
+          </div>
+        </li>
       </ul>
     </div>
 
@@ -133,19 +145,18 @@
       <div class="home-content">
         <i class="bx bx-menu"></i>
         <span class="text">Direktori Aktif</span>
-        <!-- dir aktif butuuh dihubungkan dengan direktori yang sedang aktif -->
       </div>
+
+      <div class="main-content">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus dolores nam minima cupiditate magnam alias explicabo, iusto rem quisquam ut accusantium laboriosam, ratione minus expedita harum officia quam dicta perferendis?
+        </p>
+      </div>
+
+      <footer id="footer">
+        <p>Copyright © <b>2023 Kelompok Farmasi</b> All rights reserved.</p>
+      </footer>
     </section>
-
-    <div class="footer">
-      <p>Copyright © <b>2023 Kelompok Farmasi</b> All rights reserved.</p>
-    </div>
-
-    <!-- footer -->
-    <!-- <footer id="footer">
-      <p>Copyright © <b>2023 Kelompok Farmasi</b> All rights reserved.</p>
-    </footer> -->
-    <!-- end of footer -->
 
     <script src="script.js"></script>
   </body>
