--- a/resources/views/layout/sidebar/index.html
+++ b/resources/views/layout/sidebar/index.html
@@ -16,7 +16,7 @@
         </div>
         <div class="list-item">
           <a href="#">
-            <span class="sistem-farmasi">SISTEM FARMASI</span>
+            <span class="sistem-farmasi">SISTEM FARMASI ROSATI</span>
           </a>
         </div>
       </div>
